# umr-annotation-tool

./: .gitignore  CONTRIBUTING.md  HANDOFF.md  README.md  app.py  create_db.py  farasa_test.py  main.py  package-lock.json  package.json  parse_input_xml.py  parse_lexicon_file.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  suggest_sim_words.py  utils.py  utils2.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
Desktop/umr-annotation-tool-master/one_time_scripts/: check_lexicon_file.py  parse_input_xml.py
Desktop/umr-annotation-tool-master/testing/: package-lock.json  package.json
Desktop/umr-annotation-tool-master/umr_annot_tool/: config1.py  models.py
migrations/: README
migrations/versions/: 30f497223db7_.py  d05f160d1bdf_baseline_schema.py
one_time_scripts/: get_reification_from_html.html  parse_input_xml.py  split_flex1_xml.py  update_database.py  update_real_sent_id_at_database.py
resources/: get_chinese_frames.py
resources/sentences/: sample_snts_chinese.txt  sample_snts_english.txt
static/scripts/: main.js  populate_dicts.js  utils.js
static/styles/: default2.css
templates/: index.html
testing/: eatest.js  testupload.js  uitest.js
tests/: README.md  __init__.py  conftest.py  test_alignment_generator.py  test_api_endpoints.py  test_app_creation.py  test_auth_routes.py  test_basic_navigation.py  test_lexicon_integration.py  test_modal_converter.py  test_models.py  test_navigation_routes.py  test_project_admin_handoff.py
tests/e2e/: __init__.py  conftest.py  test_account_page.py  test_authentication.py  test_document_annotation.py  test_file_upload.py  test_lexicon_roundtrip.py  test_sentence_annotation.py
tests/fixtures/: sample_files.py
tests/utils/: __init__.py  test_helpers.py
umr_annot_tool/: __init__.py  config.py  config1.py  models.py  permission.py  site.db  umr_validator.py
umr_annot_tool/errors/: handlers.py
umr_annot_tool/main/: forms.py  routes.py  umr_parser.py  validation_routes.py
umr_annot_tool/migrations/versions/: 2f8862802688_.py  2f9a7de2e565_.py  bf51de7f3d84_.py  c5750399c32b_.py  f4ef8bf8da86_.py
umr_annot_tool/posts/: forms.py  routes.py
umr_annot_tool/resources/: arabic_lemma_dict.json  arabic_propbank.json  arapahoe.xml  describe_sentlevel_tree.txt  frames_arabic.json  frames_chinese.json  frames_english.json  frames_portuguese.json  get_chinese_frames.py  ne_types.py  playground.py  rolesets.py  test_frames_chinese.json
umr_annot_tool/resources/sample_input_files/: arapaho_umr-0001.umr  english_umr-0001.umr  (+5 more)
umr_annot_tool/templates/: account.html  adjudication.html  admin_project.html  admin_utils.html  alllexicon.html  aspect.html  create_post.html  diff.html  discourse.html  display_post.html  doclevel.html  doclevel.html.bak  doclevel.html.bak2  doclevel_member.html  doclevel_thyme.html  doclevel_thyme_sent1.html  doclevelview.html  exported_all_files.html  forms_and_senses.html  guidelines.html  index.html  layout.html  lexicon.html  lexicon_add.html  lexicon_lookup.html  lexicon_result.html  login.html  member_project.html  modal.html  modification.html  new_project.html  number.html  override_document.html  partial_graph.html  person.html  post.html  project.html  search.html  sentlevel.html  sentlevel_member.html  (+11 more)
umr_annot_tool/tests/: test_umr_parser.py  test_umr_validator.py
umr_annot_tool/users/: forms.py  routes.py  utils.py
umr_annot_tool/utils/: comprehensive_validator_wrapper.py  graph_validator.py  umr_validator.py
umr_schema/: abstract_91_rolesets.json  abstract_concepts.json  aspect.json  discourse_relations.json  document_level_graph.json  modal_annotation.json  named_entities.json  nonprototypical_predication.json  roles_and_reifications.json
(+1230 files in other folders)
